# Yolo_mark

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.ps1  build.sh  linux_mark.sh  main.cpp  osx_mark.sh  run.cmd  run.sh  train.cmd  yolo_mark.sln  yolo_mark.vcxproj
.circleci/: config.yml
data/: obj.names
data/img/: air1.txt  air2.txt  air4.txt  bird1.txt  bird4.txt
src/: main.cpp
x64/Debug/: vc141.idb
x64/Debug/yolo_mark.tlog/: yolo_mark.lastbuildstate
x64/Release/: label_generator.py  test_set_generator.py  train_obj.cmd  yolo_mark.cmd  yolo_mark.iobj  yolo_mark.ipdb
x64/Release/data/: obj.data  obj.names  train.txt
x64/Release/data/img/: air3.txt  air5.txt  air6.txt  bird2.txt  bird3.txt
x64/Release/yolo_mark.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  yolo_mark.lastbuildstate  yolo_mark.write.1u.tlog
